2009-06-29  Aapo Kojo <aapo.kojo@nokia.com>

	Release 0.2.45

2009-06-26  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Patch from Laszlo Pere.

	* matchbox/core/mb-wm-client.[ch] (mb_wm_client_is_map_confirmed,
	mb_wm_client_set_map_confirmed): New functions to track if a client
	has received MapNotify yet.  Related to NB#121902
	* matchbox/core/mb-window-manager.c (mb_wm_handle_unmap_notify,
	mb_wm_handle_map_notify): Track if client has received MapNotify.

2009-06-23  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.44

2009-06-22  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	NB#122710 Weird screen appearing after closing the camera application
	
	* matchbox/core/mb-wm-client.c: When a window belongs to us, we
	should never kill its owner!

2009-06-22  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.43

2009-06-21  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	* matchbox/core/mb-wm-client.c: anything descended
	from a dialogue can be system-modal.
	* matchbox/core/mb-wm-object.[ch]: new method
	mb_wm_object_is_descendant().

2009-06-18  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* matchbox/core/mb-wm-client-base.c (mb_wm_client_base_display_sync):
	  When doing a fullscreen sync don't attempt to re-reparent an
	  undecorated client to the root window.  Undecorated clients
	  don't have frames and are reparented when they are realized.
	  The point is not to bump skip_unmaps because that never comes
	  (sinece X won't re-reparent to the same window) and then we
	  will lose an unmap in the cmgr.

2009-06-17  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	NB#119560 Hiding a window affects the visibility of
	other transient windows
	
	* matchbox/client-types/mb-wm-client-dialog.c: Added
	function mb_wm_client_dialog_stacking_layer() to figure
	out the layer dynamically.
	* matchbox/core/mb-window-manager.c: Remove all transients
	before unmanaging a window.  Function is_system_modal()
	moved out to mb-wm-client.c.